# OPER_SYS_PRACTICE6_GAME

./: CMakeLists.txt  client.c  server.c
